@@ -160,7 +160,7 @@ object OHToUInt
 }
 
 
-class PipeIO[+T <: Data](gen: T) extends Bundle
+class Valid[+T <: Data](gen: T) extends Bundle
 {
   val valid = Bool(OUTPUT)
   val bits = gen.clone.asOutput
@@ -170,12 +170,12 @@ class PipeIO[+T <: Data](gen: T) extends Bundle
       super.clone()
     } catch {
       case e: java.lang.Exception => {
-        new PipeIO(gen).asInstanceOf[this.type]
+        new Valid(gen).asInstanceOf[this.type]
       }
     }
 }
 
-class FIFOIO[T <: Data](gen: T) extends Bundle
+class Decoupled[T <: Data](gen: T) extends Bundle
 {
   val ready = Bool(INPUT)
   val valid = Bool(OUTPUT)
@@ -186,16 +186,16 @@ class FIFOIO[T <: Data](gen: T) extends Bundle
       super.clone()
     } catch {
       case e: java.lang.Exception => {
-        new FIFOIO(gen).asInstanceOf[this.type]
+        new Decoupled(gen).asInstanceOf[this.type]
       }
     }
 }
 
-object FIFOIO {
-  def apply[T <: Data](gen: T): FIFOIO[T]  = {new FIFOIO(gen)}
+object Decoupled {
+  def apply[T <: Data](gen: T): Decoupled[T]  = {new Decoupled(gen)}
 }
 
-class EnqIO[T <: Data](gen: T) extends FIFOIO(gen)
+class EnqIO[T <: Data](gen: T) extends Decoupled(gen)
 {
   def enq(dat: T): T = { valid := Bool(true); bits := dat; dat }
   valid := Bool(false);
@@ -204,7 +204,7 @@ class EnqIO[T <: Data](gen: T) extends FIFOIO(gen)
   override def clone: this.type = { new EnqIO(gen).asInstanceOf[this.type]; }
 }
 
-class DeqIO[T <: Data](gen: T) extends FIFOIO(gen)
+class DeqIO[T <: Data](gen: T) extends Decoupled(gen)
 {
   flip()
   ready := Bool(false);
@@ -213,7 +213,7 @@ class DeqIO[T <: Data](gen: T) extends FIFOIO(gen)
 }
 
 
-class FIFOIOC[+T <: Data](gen: T) extends Bundle
+class DecoupledC[+T <: Data](gen: T) extends Bundle
 {
   val ready = Bool(INPUT)
   val valid = Bool(OUTPUT)
@@ -222,8 +222,8 @@ class FIFOIOC[+T <: Data](gen: T) extends Bundle
 
 
 class ioArbiter[T <: Data](gen: T, n: Int) extends Bundle {
-  val in  = Vec.fill(n){ new FIFOIO(gen) }.flip
-  val out = new FIFOIO(gen)
+  val in  = Vec.fill(n){ new Decoupled(gen) }.flip
+  val out = new Decoupled(gen)
   val chosen = UInt(OUTPUT, log2Up(n))
 }
 
@@ -322,8 +322,8 @@ object Counter
 
 class ioQueue[T <: Data](gen: T, entries: Int) extends Bundle
 {
-  val enq   = new FIFOIO(gen.clone).flip
-  val deq   = new FIFOIO(gen.clone)
+  val enq   = new Decoupled(gen.clone).flip
+  val deq   = new Decoupled(gen.clone)
   val count = UInt(OUTPUT, log2Up(entries + 1))
 }
 
@@ -370,7 +370,7 @@ class Queue[T <: Data](gen: T, val entries: Int, pipe: Boolean = false, flow: Bo
 
 object Queue
 {
-  def apply[T <: Data](enq: FIFOIO[T], entries: Int = 2, pipe: Boolean = false): FIFOIO[T]  = {
+  def apply[T <: Data](enq: Decoupled[T], entries: Int = 2, pipe: Boolean = false): Decoupled[T]  = {
     val q = Module(new Queue(enq.bits.clone, entries, pipe))
     q.io.view(q.io.elements.filter(j => j._1 != "count")) // count io is not being used if called functionally
     q.io.enq.valid := enq.valid // not using <> so that override is allowed
@@ -405,8 +405,8 @@ class Log2 extends Node {
 class Pipe[T <: Bits](gen: T, latency: Int = 1) extends Module
 {
   val io = new Bundle {
-    val enq = new PipeIO(gen).flip
-    val deq = new PipeIO(gen)
+    val enq = new Valid(gen).flip
+    val deq = new Valid(gen)
   }
 
   io.deq <> Pipe(io.enq, latency)
@@ -414,9 +414,9 @@ class Pipe[T <: Bits](gen: T, latency: Int = 1) extends Module
 
 object Pipe
 {
-  def apply[T <: Bits](enqValid: Bool, enqBits: T, latency: Int): PipeIO[T] = {
+  def apply[T <: Bits](enqValid: Bool, enqBits: T, latency: Int): Valid[T] = {
     if (latency == 0) {
-      val out = new PipeIO(enqBits.clone)
+      val out = new Valid(enqBits.clone)
       out.valid <> enqValid
       out.bits <> enqBits
       out.setIsTypeNode
@@ -428,8 +428,8 @@ object Pipe
       apply(v, b, latency-1)
     }
   }
-  def apply[T <: Bits](enqValid: Bool, enqBits: T): PipeIO[T] = apply(enqValid, enqBits, 1)
-  def apply[T <: Bits](enq: PipeIO[T], latency: Int = 1): PipeIO[T] = apply(enq.valid, enq.bits, latency)
+  def apply[T <: Bits](enqValid: Bool, enqBits: T): Valid[T] = apply(enqValid, enqBits, 1)
+  def apply[T <: Bits](enq: Valid[T], latency: Int = 1): Valid[T] = apply(enq.valid, enq.bits, latency)
 }
 
 object PriorityMux
